configs/old/service-chatapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app
spec:
  selector:
    app: chat-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
