configs/old/route-chatapp.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: chat-app
spec:
  to:
    kind: Service
    name: chat-app
  port:
    targetPort: 8080
  tls:
    termination: edge
